--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
-  "ownerNumber": ["6285921165857@s.whatsapp.net"],
-  "ownerName": ["Christian ID"],
-  "botName": "Hitomi MD",
+  "ownerNumber": ["6283839200413@s.whatsapp.net"],
+  "ownerName": ["XynozBOTZ-"],
+  "botName": "XynozBOTZ",
   "hitokey": "HitomiMd",
-  "youtubeOwner": "https://youtube.com/c/ChristianID99",
+  "youtubeOwner": "https://youtube.com/c/XynozBOTZ",
   "web": "https://hitomi-rest-api.herokuapp.com/",
   "donasiQris": "https://i.ibb.co/f2h3MDQ/Qris.jpg",
-  "donasiPulsa": "0813-2850-7885",
+  "donasiPulsa": "082184080698",
   "sb": "➸",
-  "footer": "© Hitomi MD 2022",
-  "fake": "HITOMI MULTI DEVICE",
-  "sessionName": "hitomi",
+  "footer": "© XynozBOTZ 2022",
+  "fake": "XynozBOTZ MULTI DEVICE",
+  "sessionName": "XynozBOTZ",
   "pathimg": "./media/hitomi.jpg",
   "gamewaktu": 90,
   "limitCount": 30,
